@@ -21,6 +21,7 @@
  */
 
 using System;
+using System.Collections.Generic;
 using System.Drawing;
 using System.Reflection;
 using System.Windows.Forms;
@@ -39,6 +40,7 @@ namespace ProcessHacker.Components
         private object _listLock = new object();
         private HandleProvider _provider;
         private int _runCount = 0;
+        private List<ListViewItem> _needsAdd = new List<ListViewItem>();
         private HighlightingContext _highlightingContext;
         public new event KeyEventHandler KeyDown;
         public new event MouseEventHandler MouseDown;
@@ -214,6 +216,21 @@ namespace ProcessHacker.Components
 
         private void provider_Updated()
         {
+            lock (_needsAdd)
+            {
+                if (_needsAdd.Count > 0)
+                {
+                    this.BeginInvoke(new MethodInvoker(() =>
+                    {
+                        lock (_needsAdd)
+                        {
+                            listHandles.Items.AddRange(_needsAdd.ToArray());
+                            _needsAdd.Clear();
+                        }
+                    }));
+                }
+            }
+
             _highlightingContext.Tick();
             _runCount++;
         }
@@ -234,21 +251,19 @@ namespace ProcessHacker.Components
 
         private void provider_DictionaryAdded(HandleItem item)
         {
-            this.BeginInvoke(new MethodInvoker(() =>
-                {
-                    HighlightedListViewItem litem = new HighlightedListViewItem(_highlightingContext,
-                        item.RunId > 0 && _runCount > 0);
+            HighlightedListViewItem litem = new HighlightedListViewItem(_highlightingContext,
+                item.RunId > 0 && _runCount > 0);
 
-                    litem.Name = item.Handle.Handle.ToString();
-                    litem.Text = item.ObjectInfo.TypeName;
-                    litem.SubItems.Add(new ListViewItem.ListViewSubItem(litem, item.ObjectInfo.BestName));
-                    litem.SubItems.Add(new ListViewItem.ListViewSubItem(litem, "0x" + item.Handle.Handle.ToString("x")));
-                    litem.Tag = item;
+            litem.Name = item.Handle.Handle.ToString();
+            litem.Text = item.ObjectInfo.TypeName;
+            litem.SubItems.Add(new ListViewItem.ListViewSubItem(litem, item.ObjectInfo.BestName));
+            litem.SubItems.Add(new ListViewItem.ListViewSubItem(litem, "0x" + item.Handle.Handle.ToString("x")));
+            litem.Tag = item;
 
-                    litem.NormalColor = this.GetHandleColor(item);
+            litem.NormalColor = this.GetHandleColor(item);
 
-                    listHandles.Items.Add(litem);
-                }));
+            lock (_needsAdd)
+                _needsAdd.Add(litem);
         }
 
         private void provider_DictionaryModified(HandleItem oldItem, HandleItem newItem)
@@ -268,13 +283,7 @@ namespace ProcessHacker.Components
             this.BeginInvoke(new MethodInvoker(() =>
                 {
                     lock (_listLock)
-                    {
-                        int index = listHandles.Items[item.Handle.Handle.ToString()].Index;
-                        bool selected = listHandles.Items[item.Handle.Handle.ToString()].Selected;
-                        int selectedCount = listHandles.SelectedItems.Count;
-
                         listHandles.Items[item.Handle.Handle.ToString()].Remove();
-                    }
                 }));
         }
 
