@@ -10,6 +10,7 @@ Process Hacker
    * Added ability to create dump files for processes
    * Added ability to detach processes from debuggers
    * Notification icon process list is now sorted
+   * Lists are dramatically faster (especially the handle list)
    * Detailed handle properties
    * Event objects can now be modified - set, clear, pulse, reset
    * Event pair objects can now be modified - set high, set low
